<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_homescreen">Tentsile</string>
    <string name="app_name_landscape">Tentsile Triangulator</string>
    <string name="app_name_portrait">Tentsile Triangulator</string>
    <string name="desc_clearing">Clearing Layout</string>
    <string name="desc_level">Leveling Tool</string>

    <string name="desc_rotate">Rotate Tent or Platform</string>

    <string name="example_value">7.41</string>

    <string name="unit_meters">m</string>
    <string name="unit_meters_with_number_units">%1.0f m</string>
    <string name="unit_meters_with_number_tenths">%1.1f m</string>
    <string name="unit_meters_with_number_hundredths">%1.2f m</string>
    <string name="desc_meters">Meters</string>

    <string name="unit_imperial">ft</string>
    <string name="unit_imperial_with_number_units">%1.0f\'</string>
    <string name="unit_imperial_with_number_tenths">%1.0f\' %1.0f\"</string>
    <string name="unit_imperial_with_number_hundredths">%1.0f\' %1.0f\" %1.0f/8</string>
    <string name="desc_imperial">Imperial (feet)</string>

    <string name="menu_default_tether">Reset Tether Points</string>
    <string name="menu_browser_tentsile">Tentsile Website</string>
    <string name="menu_browser_source_code">View the code!</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_level">Level</string>
    <string name="menu_switch_to_imperial">Use feet (ft)</string>
    <string name="menu_switch_to_meters">Use meters (m)</string>
    <string name="menu_increase_symbols">Increase symbols</string>
    <string name="menu_decrease_symbols">Decrease symbols</string>

    <string name="faq_accuracy_1_question">How accurately do I need to measure?</string>
    <string name="faq_accuracy_1_answer">The App itself is accurate to one centimeter or 3/8 imperial
        inches.\n\nYou can use the app to get the measurements sufficiently close to then be able to
        align the tent according to the manufacturers instructions.</string>
    <string name="faq_accuracy_2_question">How do I get the app to match my measurements?</string>
    <string name="faq_accuracy_2_answer">When you tap the label halfway between the trees, the app
        should open an interface for fine-tuning its value.\n\nDo not worry about entering a more
        precise value than this app allows. Less precise measurements are likely close enough for
        what you need to setup. Use this App to get close enough to follow the manufacturers
        instructions.</string>
    <string name="faq_all_at_once_question">What if my measurement goes off the screen?</string>
    <string name="faq_all_at_once_answer" tools:ignore="TypographyEllipsis">Depending on the issue,
        you have a few options. You can...
        \n\n... drag the tether intersection point (if visible) to move all the anchors simultaneously.
        \n\n... rotate the configuration (when tent is drawn) by dragging a point that is not part of the configuration.
        \n\n... tilt the device and modify anchors in that orientation.
        \n\n... reset the anchors using the menu option.
        \n\n... change the scale of the units using the slider.</string>
    <string name="faq_measurement_1_question">Do I need to know how thick the tree is?</string>
    <string name="faq_measurement_1_answer">You do not need to know where the center of the tree is.
        Instead, imagine a knot on the surface of each tree about where the tent tether would attach.
        Measure the distance from the imaginary knot on one tree to the imaginary knot on the next
        anchoring tree, etc.</string>
    <string name="faq_measurement_2_question">What am I measuring?</string>
    <string name="faq_measurement_2_answer">You are measuring the distances between approximate
        locations of the knots.</string>
    <string name="faq_missing_platform_question">Why is my tent not in the list?</string>
    <string name="faq_missing_platform_answer">Try dragging the list to see tents that are not in
        view. Otherwise, if it is a newer product, we may need to add it. In the meantime try using
        a tent or hammock with a similar \"footprint\" as yours.</string>
    <string name="faq_tools_question">What tools will I need?</string>
    <string name="faq_tools_answer">It helps to have a measuring tool handy, such as measuring tape
        or laser measuring tool. But, you could perform the measurements using consistently-spaced
        units, such as equally-spaced knots in a (low-stretch) string, sufficiently consistent
        paces, or even the straps that come with the tent. The point here is to measure using
        consistent units.</string>
    <string name="faq_symbol_orange_triangle_question">What does the orange triangle indicate?</string>
    <string name="faq_symbol_orange_triangle_answer">The orange triangle indicates that setup is
        possible, but involves a non-intuitive \"trick\".\n\nWith the ratchet detached from the
        tent, simultaneously pass the ratchet through the strap loop and the strap through the
        ratchet loop to cinch them together. Then pass the strap through the tent D-ring, around the
        tree, and into the ratchet. Tighten as usual.\n\nAlternatively, with the ratchet attached to
        the tent D-ring, pass the ratchet through the strap loop. Then wrap the strap around the
        tree and into the ratchet. Tighten as usual.</string>
    <string name="faq_symbol_yellow_triangle_question">What does the yellow triangle indicate?</string>
    <string name="faq_symbol_yellow_triangle_answer">The yellow triangle indicates that you will not
        have sufficient strap length to wrap around the tree according to recommendations.\n\nSetup
        using trees requires an extension or tree-protector strap for the tree with this symbol over
        it.</string>
    <string name="faq_symbol_red_x_question">What does the red X indicate?</string>
    <string name="faq_symbol_red_x_answer">The red X indicates that (ideal) setup is not possible.
        \n\nThe tree with the red X over it is too close.</string>
    <string name="faq_exiting_faq_page_question">How do I close this FAQ page?</string>
    <string name="faq_exiting_faq_page_answer">Press the back button to close this page.</string>
    <string name="faq_small_circles_on_tethers_question">What are the small circles shown on the tethers?</string>
    <string name="faq_small_circles_on_tethers_answer">The small circles are supposed to represent
        transition points, where the tethers change. For example, the tent corners, ratchets, and
        straps.</string>
    <string name="faq_sight_indicator_question">Do I still need to use the tabs on the sides of my
        tent?</string>
    <string name="faq_sight_indicator_answer">That would be best. This app tries to get you close
        to the point where you can then align the tethers with the sight-indicator tabs on the sides
        of the non-equal-sided tents and hammocks.</string>
    <string name="faq_no_level_question">Where can I find the level tool?</string>
    <string name="faq_no_level_answer">If your device supports detecting gravity, then \"Level\"
        will appear in the menu.</string>
    <string name="faq_fourth_tree_method_question">How can I use a fourth tree with this app?</string>
    <string name="faq_fourth_tree_method_answer">If you have an extra ratchet and strap, you can use
        a fourth tree to redirect the how one of the tethers aligns. To use this technique with this
        app follow these steps:\n  (1) Measure the distance between two of the trees, placing their
        markers accordingly.\n  (2) Place the third marker so that its tether passes somewhere
        between the third and fourth trees. (Note that the position of the third marker does not
        matter very much as long as the tether direction is correct.)\n  (3) Attach the straps to
        the first two trees using the measurements computed with the app.\n  (4) Loosely attach the
        third strap to the third tree.\n  (5) Loop the fourth ratchet around the third strap.\n  (6)
        Attach the fourth strap to the fourth tree\n  (7) Finally, tighten the third and fourth
        straps until all tethers are correctly aligned with the tent or hammock.</string>

    <string name="warn_screen_rotation_locked">Disable screen lock for better experience!</string>

    <string name="url_source_code_android">https://github.com/munifrog/tentsile/tree/master/android/app/src</string>
    <string name="url_tentsile_website_main">https://www.tentsile.com/</string>
</resources>