<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_default_tether_points"
        android:title="@string/menu_default_tether"
        app:showAsAction="never" />

    <item android:id="@+id/action_browser_tentsile"
        android:title="@string/menu_browser_tentsile"
        app:showAsAction="never" />

    <item android:id="@+id/action_enable_imperial"
        android:title="@string/menu_switch_to_imperial"
        app:showAsAction="never" />

    <item android:id="@+id/action_enable_meters"
        android:title="@string/menu_switch_to_meters"
        app:showAsAction="never" />

    <item android:id="@+id/action_increase_symbols"
        android:title="@string/menu_increase_symbols"
        app:showAsAction="never" />

    <item android:id="@+id/action_decrease_symbols"
        android:title="@string/menu_decrease_symbols"
        app:showAsAction="never" />

    <item android:id="@+id/action_faq"
        android:title="@string/menu_faq"
        app:showAsAction="never" />

    <item android:id="@+id/action_browser_source_code"
        android:title="@string/menu_browser_source_code"
        app:showAsAction="never" />
</menu>